@@ -1,3 +1,5 @@
+* Search coverage with product name or code
+
 Version 1.3 - 2015-01-22
 * Add extra_data values validation
 
